example/affinity-with-the-canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginxcan-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginxcan
    spec:
      containers:
      - image: docker.io/juanmatias/affinity-with-the-canary:heavytest
      # - image: firesh/nginx-lua:alpine
        imagePullPolicy: Always
        name: nginxcan
        command: ["/usr/local/openresty/bin/openresty"]
        args: ["-c","/etc/nginx/customconfig/nginx.conf", "-g", "daemon off;"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginxcan-configs
          mountPath: /etc/nginx/conf.d
        - name: nginxcan-mainconfig
          mountPath: /etc/nginx/customconfig
      # Load the configuration files for nginx
      volumes:
        - name: nginxcan-configs
          configMap:
            name: nginxcan-config
        - name: nginxcan-mainconfig
          configMap:
            name: nginxcan-mainconfig
---
apiVersion: v1
kind: Service
metadata:
  name: nginxcan-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginxcan
