example/deploy-canary.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kubeapp-canary
spec:
  replicas: 1
  template:
    metadata:
      name: kubeapp-canary
      labels:
        app: kubeapp
        env: canary
    spec:
      containers:
      - name: kubeapp
        image: juanmatias/canary-app:2.0
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        command: ["/app"]
        ports:
        - name: kubeapp
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: kubeapp-canary-service
  labels:
    app: kubeapp
    env: canary
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubeapp
    env: canary
